facepp: update apikey and secret

--- a/code/python/test/facepp-python-sdk-master/apikey.cfg
+++ b/code/python/test/facepp-python-sdk-master/apikey.cfg
@@ -2,5 +2,5 @@ SERVER = 'http://api.cn.faceplusplus.com/'
 # uncomment the following line to switch to US server
 # SERVER = 'http://api.us.faceplusplus.com/'
 
-API_KEY = '<your API key here>'
-API_SECRET = '<your API secret here>'
+API_KEY = '18fbe8509271887aa01d23b919b15169'
+API_SECRET = 'BCbNsrrlY54juGAk16OPDeusjlZ3DNOj'
